<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.FormularioActivity"
    android:background="@color/applicationBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="17dp"
                    android:textStyle="bold"
                    android:text="@string/campo_nome" />

                <EditText
                    android:id="@+id/nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/campo_telefone" />

                <EditText
                    android:id="@+id/telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="11"
                    android:numeric="integer"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">
                <TextView
                    android:paddingLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/campo_cep"/>

                <EditText
                    android:id="@+id/cep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:numeric="integer"
                    android:maxLength="8"/>
                <Button
                    android:id="@+id/btn_pesquisar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pesquisar"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:background="@color/endBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/campo_logradouro"/>

                    <TextView
                        android:id="@+id/logradouro"
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp">

                    <TextView
                        android:paddingLeft="30dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/campo_bairro"/>

                    <TextView
                        android:id="@+id/bairro"
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:paddingLeft="26dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:paddingLeft="30dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/campo_uf"/>

                        <TextView
                            android:id="@+id/uf"
                            android:paddingLeft="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:paddingLeft="55dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/campo_cidade"/>

                        <TextView
                            android:id="@+id/cidade"
                            android:paddingLeft="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <View
                android:id="@+id/separador"
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_confirmar"
                    android:layout_weight=".5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_confirmar"/>

                <Button
                    android:id="@+id/limpar"
                    android:layout_weight=".5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_limpar"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
